fix: fixed width search input, fixed visibility menu button

--- a/css/style.css
+++ b/css/style.css
@@ -494,7 +494,6 @@ img {
   }
   .navbar__search {
     margin-left: auto;
-    max-width: 340px;
   }
   .navbar-menu {
     padding-top: 22px;
@@ -503,6 +502,9 @@ img {
   .navbar-menu__link {
     font-size: 12px;
     line-height: 15px;
+  }
+  .search__input {
+    width: 340px;
   }
 }
 
@@ -517,6 +519,7 @@ img {
   .menu-button {
     height: 16px;
     width: 16px;
+    padding: 0;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
